# note-app-backend-python

./: main.py  pyproject.toml
migrations/: env.py
migrations/versions/: fcc4c14b2947_add_note.py  ffe3dd29e304_create_users_table.py
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: notes.py  users.py
src/routes/: auth.py  notes.py  users.py
src/services/: auth.py
